--- a/webstore/src/main/resources/templates/layout/layout.html
+++ b/webstore/src/main/resources/templates/layout/layout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>CoffeShop</title>
+    <title>WebStore</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" th:href="@{/css/main.css}" href="../../css/main.css"/>
     <th:block layout:fragment="css_placeholder">
@@ -14,7 +14,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" layout:fragment="navbar">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/}">CoffeShop</a>
+        <a class="navbar-brand" th:href="@{/}">Web Store</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,18 +30,15 @@
                     </a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a class="nav-link" th:href="@{/products}">Products</a>
-                </li>
-                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
                     <a class="nav-link" th:href="@{/orders}">Orders</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a class="nav-link" th:href="@{/persons}">Persons</a>
+                    <a class="nav-link" th:href="@{/persons}">Users</a>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" th:href="@{/login}">Login</a>
                 </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
+                <li class="nav-item" sec:authorize="isAuthenticated() && hasRole('ROLE_CUSTOMER')">
                     <a class="nav-link" th:href="@{/my-account}">My Account</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
@@ -63,7 +60,7 @@
     </nav>
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4 banner-container" layout:fragment="page_header">
-        <h1 class="display-5">Welcome to our Coffeeshop!</h1>
+        <h1 class="display-5">Welcome to our WebStore!</h1>
         <div class="lead banner"></div>
     </header>
 
