--- a/inventory/src/main/resources/templates/index.html
+++ b/inventory/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>WebStore</title>
+    <title>Inventory App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" th:href="@{/css/main.css}" href="../../css/main.css"/>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/4.0.0-1/css/bootstrap.min.css"/>
@@ -18,7 +18,25 @@
     </nav>
 <!-- Page Content -->
 <div class="container">
-    <h1>Hello world</h1>
+    <h2>Order queue</h2>
+    <table class="table table-bordered table-striped">
+            <thead class="thead-dark">
+            <tr>
+                <th scope="col">Order name</th>
+                <th scope="col">Description</th>
+                <th scope="col">Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="order : ${orders}">
+                <td th:text="${order.name}"></td>
+                <td th:text="${order.description}"></td>
+                <td>
+                    Process
+                </td>
+            </tr>
+            </tbody>
+    </table>
 </div>
 <!-- /.container -->
 <script type="text/javascript" src="/webjars/jquery/3.3.1/jquery.js"></script>
