--- a/webstore/src/main/resources/templates/layout/layout.html
+++ b/webstore/src/main/resources/templates/layout/layout.html
@@ -35,6 +35,9 @@
                 <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
                     <a class="nav-link" th:href="@{/persons}">Users</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/product/all}">Products</a>
+                </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" th:href="@{/login}">Login</a>
                 </li>
