--- a/webstore/src/main/resources/static/css/product_list.css
+++ b/webstore/src/main/resources/static/css/product_list.css
@@ -1,22 +1,10 @@
-@font-face {
-    font-family: "cabin";
-    src: url('resources/fonts/Cabin-Regular.ttf') format('truetype');
-}
-@font-face {
-    font-family: "quicksand";
-    src: url('resources/fonts/Quicksand-Regular.ttf') format('truetype');
-}
-@font-face {
-    font-family: "raleway";
-    src: url("<c:url value='resources/fonts/Raleway-Regular.ttf'/>");
-}
 .product {
-    float: left;
+    /*float: left;*/
     text-align: center;
     margin: 10px;
-    width: 400px;
-    height: 400px;
-    display: inline-block;
+    /*width: 400px;*/
+    /*height: 400px;*/
+    /*display: inline-block;*/
     box-shadow: 0px 0px 2px 2px rgba(50, 50, 50, 0.5);
 }
 .product:hover {
@@ -38,11 +26,11 @@
 .prod_add_cart:hover {
     background-color: #819ca9;
 }
-#products {
-    width: 95%;
-    margin: 100px auto;
-    text-align: center;
-}
+/*#products {*/
+    /*width: 95%;*/
+    /*margin: 100px auto;*/
+    /*text-align: center;*/
+/*}*/
 #toast {
     position: fixed;
     right: 20px;
@@ -69,11 +57,18 @@
     height: 15px;
     font-size: 10pt;
 }
-a:link{
-    text-decoration: none;
-    color: white;
-}
+
 a:visited{
-    text-decoration: none;
-    color: white;
+    text-decoration: none;!important;
+    color:black;
+}
+
+a:link{
+    text-decoration: none;!important;
+    color:black;
+}
+
+a:hover{
+    text-decoration: none;!important;
+    color:black;
 }
