--- a/inventory/src/main/resources/templates/index.html
+++ b/inventory/src/main/resources/templates/index.html
@@ -23,14 +23,20 @@
             <thead class="thead-dark">
             <tr>
                 <th scope="col">Order name</th>
-                <th scope="col">Description</th>
+                <th scope="col">Status</th>
+                <th scope="col">Ordered At</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Total price</th>
                 <th scope="col">Action</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="order : ${orders}">
                 <td th:text="${order.name}"></td>
-                <td th:text="${order.description}"></td>
+                <td th:text="${order.status}"></td>
+                <td th:text="${order.createdDate}"></td>
+                <td th:text="${order.quantity}"></td>
+                <td th:text="${order.totalPrice}"></td>
                 <td>
                     Process
                 </td>
