--- a/webstore/src/main/resources/templates/layout/layout.html
+++ b/webstore/src/main/resources/templates/layout/layout.html
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a class="nav-link" th:href="@{/orders}">Orders</a>
+                    <a class="nav-link" th:href="@{/orders-admin}">Orders</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
                     <a class="nav-link" th:href="@{/persons}">Users</a>
