--- a/inventory/src/main/resources/templates/index.html
+++ b/inventory/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
                 <th scope="col">Update Status</th>
             </tr>
             </thead>
-            <tbody>
+            <tbody id="orders">
             <tr th:each="order : ${orders}">
                 <td th:text="${order.status}"></td>
                 <td th:text="${order.createdDate}"></td>
@@ -48,7 +48,10 @@
 </div>
 <!-- /.container -->
 <script type="text/javascript" src="/webjars/jquery/3.3.1/jquery.js"></script>
-<script th:src="@{/js/inventory.js}" src="../../js/inventory.js" type="text/javascript"></script>
 <script type="text/javascript" src="/webjars/bootstrap/4.0.0-1/js/bootstrap.js"></script>
+<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="/webjars/sockjs-client/sockjs.min.js"></script>
+<script type="text/javascript" src="/webjars/stomp-websocket/stomp.min.js"></script>
+<script th:src="@{/js/inventory.js}" src="../../js/inventory.js" type="text/javascript"></script>
 </body>
 </html>
