--- a/webstore/src/main/resources/templates/person.html
+++ b/webstore/src/main/resources/templates/person.html
@@ -60,9 +60,9 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="zipcode" class="col-sm-3 col-md-3 col-form-label">Zip Code</label>
+            <label for="zipCode" class="col-sm-3 col-md-3 col-form-label">Zip Code</label>
             <div class="col-sm-9 col-md-9">
-                <input th:field="*{address.zipcode}" type="text" class="form-control" id="zipcode">
+                <input th:field="*{address.zipcode}" type="text" class="form-control" id="zipCode">
             </div>
         </div>
         <div class="form-group row" sec:authorize="hasRole('ROLE_ADMIN')">
